Debug Faulty Descriptions in Tests